--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,41 @@
 
 
 
+	<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title></title>
+  </head>
+  <body>
+
+<h1><%= @name %></h1>
+
+<h2>Team Motto: <%= @motto %></h2>
+
+
+<% @members.each do |member| %>
+<h2>Hero Name: <%= member["name"] %></h2>
+<h3>Hero Power: <%= member["power"] %></h3>
+<h3>Hero Biography: <%= member["bio"] %></h3>
+<% end %>
+</body>
+</html>
+
+<!-- <h2>Hero Name:   </h2>
+<h3>Hero Power:  </h3>
+<h3>Hero Biography:  </h3>
+
+
+<h2>Hero Name:   </h2>
+<h3>Hero Power:  </h3>
+<h3>Hero Biography:  </h3>
+ -->
+
+
+
+
+
+
+
+
